avformat/libsrt: use SRT_EPOLL_IN for waiting for an incoming connection

This is the proper poll mode for waiting for an incoming connection according
to the SRT API docs.

Fixes ticket #9142.

Signed-off-by: Marton Balint <cus@passwd.hu>